openshift/svc.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: "2024-06-13T11:36:47Z"
  labels:
    app: ivolve-app
    app.kubernetes.io/component: ivolve-app
    app.kubernetes.io/instance: ivolve-app
  name: ivolve-app
  namespace: omarrouby
  resourceVersion: "1287295"
  uid: f060acd8-1497-48da-a74a-3cca1815fc8f
spec:
  clusterIP: 172.30.29.248
  clusterIPs:
  - 172.30.29.248
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: ivolve-app
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
